--- a/eksamen/css/styles.css
+++ b/eksamen/css/styles.css
@@ -14,6 +14,7 @@ body{
     overflow-x: hidden;
 }
 
+
 /* Fade Animations - Start */
 
 .fade-in{
@@ -149,6 +150,50 @@ header{
 }
 
 /* Header, Navigation, Burgermenu - Slut */
+
+
+/* Arrow Scroll Animation - Start */
+
+.arrow-scroll{
+    display: grid;
+    place-content: center;
+    padding-top: 69vh;
+}
+
+.arrow-scroll span {
+	width: 30px;
+	height: 30px;
+    display: block;
+	border-right: 2px solid #F7F5FB;
+	border-bottom: 2px solid #F7F5FB;
+	transform: rotate(45deg);
+	margin: -10px;
+	animation: animate 2s infinite;
+}
+
+.arrow-scroll span:nth-child(2) {
+	animation-delay: -0.2s;
+}
+
+.arrow-scroll span:nth-child(3) {
+	animation-delay: -0.4s;
+}
+
+@keyframes animate {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+		transform: rotate(45deg) translate(10px, 10px);
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+/* Arrow Scroll Animation - Slut */
+
 
 /* Sektion Konkurrence - Start */
 
